@@ -3765,10 +3765,6 @@ $ #Настройка редактора#
                           табуляции, переводы строк и возвраты 
                           кареток).
 
-  #Cлово под курсором#      При вызове диалога поиска/замены в строку
-                          поиска будет подставляться слово, на
-                          котором стоит курсор.
-
   #Выделять найденное#      Найденные последовательности будут выделены.
 
   #Курсор в конце#          Установить курсор в конец фрагмента,
