@@ -1,4 +1,14 @@
-﻿drkns 12.12.2015 18:50:14 +0200
+﻿drkns 16.12.2015 00:42:39 +0200 - build 4473
+
+1. Опция Editor settings - [x] Pick up the word удалена.
+   Вместо неё теперь кнопки [ Word ] и [ Selection ] прямо в диалоге поиска, вставляющие в строку то, что на них написано.
+   Selection берёт только первую строку блока. При отсутствии блока берёт слово.
+
+2. DlgBuilder неправильно рассчитывал вертикальные координаты при наличии двух колонок разной высоты.
+
+3. Рефакторинг.
+
+drkns 12.12.2015 18:50:14 +0200
 
 1. Весь исходный код теперь в utf-8.
 
